[gd_scene load_steps=2 format=3 uid="uid://c7q3uaom6s3af"]

[ext_resource type="Script" path="res://src/scene_manager.gd" id="1"]

[node name="SceneManager" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1")

[node name="DumpSlot" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="CurrentSceneSlot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeRectLayer" type="CanvasLayer" parent="."]
layer = 10
visible = false

[node name="Control" type="Control" parent="FadeRectLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Foreground" type="ColorRect" parent="FadeRectLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
